<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ready2Help</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_elder">ElderActivity</string>
    <string name="entry_logo">Entry Logo</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="entry_privacy_enter">Please read our</string>
    <string name="entry_privacy_policy"><u>privacy policy</u></string>
    <string name="entry_privacy_exit">before registering.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>/string>
    <string name="step_1" tools:ignore="TypographyFractions">Step 1/3</string>
    <string name="step_2" tools:ignore="TypographyFractions">Step 2/3</string>
    <string name="step_3" tools:ignore="TypographyFractions">Step 3/3</string>
    <string name="elder">Elder</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="volunteer">Volunteer</string>
    <string name="req_characters">* 8 characters</string>
    <string name="req_symbols">* 1 symbol</string>
    <string name="req_numbers">* 1 number</string>
    <string name="req_characters_done">+ 8 characters</string>
    <string name="req_symbols_done">+ 1 symbol</string>
    <string name="req_numbers_done">+ 1 number</string>
    <string name="suggest_password">* <u>get our password</u></string>
    <string name="suggest_password_done">+ get our password</string>
    <string name="continue_button">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="choose_your_city">Choose your city</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="one_last_step">One Last Step</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="add_task_button">Add Task Button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_tasks">My Tasks</string>
</resources>