<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivityOne">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical|end"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:gravity="bottom|center"
                android:text="@string/register"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="bottom|center"
                android:text="@string/step_1"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textElder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/elder_empty"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/elder"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textVolunteer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/volunteer_filled"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/volunteer"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|start"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextRegisterEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@drawable/input_rounded"
                android:ems="10"
                android:fontFamily="@font/bold"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingVertical="@dimen/fab_margin"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@drawable/input_rounded"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextRegisterPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_empty"
                    android:ems="10"
                    android:fontFamily="@font/bold"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingVertical="@dimen/fab_margin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/buttonRegisterShowPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64dp"
                    android:layout_weight="1"
                    android:minWidth="48dp"
                    android:src="@drawable/ic_eye"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/fab_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text8Char"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/req_characters"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text1Symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/req_symbols"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/fab_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/req_numbers"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textSuggestPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/suggest_password"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonRegisterContinue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.1"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/bold"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|end"
                android:paddingHorizontal="@dimen/nav_header_vertical_spacing"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textRegisterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center|start"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>