<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical|end"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:gravity="bottom|center"
            android:text="@string/login"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:srcCompat="@drawable/ic_logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|start"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextLoginEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@drawable/input_rounded"
                android:ems="10"
                android:fontFamily="@font/bold"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingVertical="@dimen/fab_margin"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@drawable/input_rounded"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_empty"
                    android:ems="10"
                    android:fontFamily="@font/bold"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingVertical="@dimen/fab_margin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/buttonLoginShowPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64dp"
                    android:layout_weight="1"
                    android:minWidth="48dp"
                    android:src="@drawable/ic_eye"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textLoginForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/button_margin_horizontal"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonLoginContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/bold"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center|end"
                android:paddingHorizontal="@dimen/nav_header_vertical_spacing"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center|start"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>