<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_up_3_bg"
    tools:context=".SignUpActivityThree">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical|end"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:gravity="bottom|center"
            android:text="@string/one_last_step"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/regular"
            android:gravity="bottom|center"
            android:text="@string/step_3"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="center|start"
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextRegisterCountryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_weight="0.7"
                android:background="@drawable/input_rounded"
                android:ems="2"
                android:fontFamily="@font/bold"
                android:inputType="number"
                android:paddingVertical="@dimen/fab_margin"
                android:text="+90"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextRegisterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_weight="0.3"
                android:autofillHints=""
                android:background="@drawable/input_rounded"
                android:ems="10"
                android:fontFamily="@font/bold"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:paddingVertical="@dimen/fab_margin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonRegisterContinue3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/bold"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>